# SECRETHOUND

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
docs/: developer_guide.md
secrethound/: main.py
secrethound/utils/: duplicate_finder.py  file_formats.py  sensitive_patterns.py  sensitive_patterns_big.py  updater.py  web_scanner.py
utils/: duplicate_finder.py  sensitive_patterns.py  sensitive_patterns_big.py
